--- a/config.properties
+++ b/config.properties
@@ -5,3 +5,17 @@ MYSQLJDBC.driver = com.mysql.cj.jdbc.Driver
 MYSQLJDBC.url = jdbc:mysql://localhost:3306/CarlosDB
 MYSQLJDBC.userName = root
 MYSQLJDBC.password = password
+
+implicit.wait = 10
+
+browser.maximize = true
+
+#take screenshot for failures mode by default set to false.
+take.screenshot = false
+
+#headless mode by default set to false.
+#set for chrome only
+headless.mode = false
+
+magentoLuma.username = cm9uaV9jb3N0QGV4YW1wbGUuY29t
+magentoLuma.password = cm9uaV9jb3N0M0BleGFtcGxlLmNvbQ==
