--- a/config.properties
+++ b/config.properties
@@ -9,6 +9,10 @@ UserInfoFirstname= Sam
 UserInfoLastname= Smith
 UserInfoZip= 11333
 
+#Somaya
+browserstack.suserName= somayajannatr_ckvmwa
+browserstack.accessKey= CYQGqdpoP1rUqmyisoo9
+
 #Carlos
 browserstack.username = Y2FybG9zcGFzY3VhbF9nOTVCVWY=
 browserstack.password = WHpzWmFKemlzdUh3SjRxZG9EcFk=
