--- a/config.properties
+++ b/config.properties
@@ -5,6 +5,9 @@ saucedemo.correct.password = secret_sauce
 saucedemo.incorrect.username = standard
 saucedemo.incorrect.password = secret_sauce
 
+saucedemo.prob.username=problem_user
+saucedemo.prob.password= secret_sauce
+
 UserInfoFirstname= Sam
 UserInfoLastname= Smith
 UserInfoZip= 11333
